Fix axis page and blank pages

--- a/_site.yml
+++ b/_site.yml
@@ -19,19 +19,19 @@ navbar:
         - text: "Facets"
           href: facets.html
         - text: "Legends"
-          href: Legends.html 
+          #href: Legends.html 
         - text: "Annotations"
-          href: Annotations.html  
+          #href: Annotations.html  
         - text: "Position Adjustments"
-          href: position.html 
+          #href: position.html 
         - text: "Adding Summary Statistics"
-          href: summarystats.html
+          #href: summarystats.html
         - text: "Adjusting Non-Color Aesthetics"
-          href: NonColorAesthetics.html
+          #href: NonColorAesthetics.html
         - text: "Color"
-          href: color.html
+          #href: color.html
         - text: "Interactvity"
-          href: Interactivity.html 
+          #href: Interactivity.html 
     - text: "Wranging Data"
       href: WranglingDataIntro.html
     - text: "Markdown Help"
